--- a/Pruebas/carrusel2.html
+++ b/Pruebas/carrusel2.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  
+    
+    <link rel="stylesheet" href="assets/css/boopstrat4411.css">  
+    <link rel="stylesheet" href="assets/js/bootstrap-411.js">
+    <link rel="stylesheet" href="assets/js/jquery321.js">
   
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -93,7 +93,6 @@
 
 
 <script>
-     //optional
 		$('#blogCarousel').carousel({
 				interval: 3000
 		});
