arreglo a hero seccion

--- a/PruebasEnJS/index.html
+++ b/PruebasEnJS/index.html
@@ -51,20 +51,22 @@
 
 <!--HERO seccion principal-->
 
-<header class="hero text-lig text-center pt-5 mt-5">
+<header class="hero text-lig text-center mt-5">
     <div class="container-hero">
-      <h1 class="display-3 font-weight-bold my-5 p-1">Soy Carlos</h1>
+      <br>
+      <br>
+      <h4 class="display-4 my-5 p-1">Yo soy  </h4>
       <hr>
-      <p class="text-light-center">Este es mi portafolio.</p>
+      <span class="hero-title">Carlos</span>
     </div>
   </header>
 
 
 
 <!--Carrusel de hobbies-->
-<div class="carrusel-caja">
+<div class="carrusel-caja d-none d-md-block">
     <h3>MIS HOBBIES</h3>
-<div id="carouselExampleIndicators" class="carousel slide p-5 d-none d-md-block " data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide p-5  " data-ride="carousel">
     <ol class="carousel-indicators">
       <li class="indicador" data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li class="indicador" data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -109,10 +111,13 @@
   </div> 
 </div>
 
+<!--Seccion de información personal (texto)-->
 
-<!--Seccion de información personal-->
+<!--Seccion de información  (Mi experiencia)-->
 
-<!--Seccion mis trabajos-->
+
+
+<!--Seccion mis trabajos en CARD -->
 
 <!--Formulario TYPEFORM-->
 
