agregando seccion personal

--- a/PruebasEnJS/index.html
+++ b/PruebasEnJS/index.html
@@ -113,6 +113,33 @@
 
 <!--Seccion de información personal (texto)-->
 
+<section class="info-personal d-none d-md-block">
+  <p>Soy un profesional dedicado y activo, me he desarrollado en el area de la informática y servicios, tengo mas de 20 años de experiencia en areas como soporte, coordinación y supervisión de servicios, actualmente desarrollador Fullstack de JavaScript. </p>
+ 
+  <div class="row">
+    <div id="personal">    
+        <div class="personal col-12 col-md-6">
+          <div class="estudios">
+            <p>
+                Casado y con dos hijas, vivo en Santiago de Chile, me gusta el deporte la musica sobre todo de los años 80, el cine de tipo fantasia y accion.</p>
+                <p>
+                  Soy titulado de eletrónica con mención en microprocesadores, titulo obtenido en el Instituto Gamma de eletrónica.
+                </p>
+                <p>Tambien complete un diplomado en redes de la computación, en el Instituto AIEP, dependiente de la Universidad Andres Bello.</p>
+          </div>
+        </div>
+
+        <div class="personal col-12 col-md-6">
+          <div class="estudios"></div>
+            <p>Desarrollador Web desde el año 2020, con especialidad en JavaScript y NodeJs, con conocimiestos de SQL Server, Angular, VueJS.</p>
+            <p>Titulado de la carrera Fullstack de javaScript por la academia de Talento Digital</p>
+            <p>Con proyectos desarrolados a empresas como Cupon, Olivia Ros, Meet&coffee, entre los mas destacados.</p>
+        </div>
+    </div>
+</section>
+
+
+
 <!--Seccion de información  (Mi experiencia)-->
 
 
