actualizando mi experiencia

--- a/PruebasEnJS/index.html
+++ b/PruebasEnJS/index.html
@@ -138,13 +138,35 @@
     </div>
 </section>
 
-
-
 <!--Seccion de información  (Mi experiencia)-->
 
+<section class="experiencia">
+<div class="experiencia-div">
+  <p class="experiencia-div-parrafo">MI EXPERIENCIA</p>
+  <hr>
+  <div class="row">
+    
+    <div class="col-12 col-md-6">
+      <i class="fab fa-js-square fa-5x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="CodePen"></i>
+      <h5>Desarrollador JavaScript</h5>
+      <span class="exp-ano">2020 - 2021</span>
+    </div>
+    <div class="col-12 col-md-6">
+      <i class="fab fa-angular fa-5x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="CodePen"></i>
+      <h5>Angular</h5>
+      <span class="exp-ano">2021</span>
+    </div>
+  </div>
+</div>
+<div class="experiencia-div"></div>
+
+</section>
 
 
 <!--Seccion mis trabajos en CARD -->
+
+
+
 
 <!--Formulario TYPEFORM-->
 
