ajuste a las tarjetas

--- a/PruebasEnJS/index.html
+++ b/PruebasEnJS/index.html
@@ -51,7 +51,7 @@
 
 <!--HERO seccion principal-->
 
-<header class="hero text-lig text-center mt-5">
+<header class="hero text-lig text-center my-5">
     <div class="container-hero">
       <br>
       <br>
@@ -100,7 +100,7 @@
             <i class="fas fa-futbol fa-5x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="CodePen"></i>
           </div>
           <div class="col-4">
-            <i class="fab fa-js-square fa-5x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="CodePen"></i>
+            <i class="fab fa-js fa-5x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="CodePen"></i>
           </div>
 
         </div>
@@ -164,6 +164,57 @@
 
 
 <!--Seccion mis trabajos en CARD -->
+
+<section class="container p-5 bg-light" id="work">
+
+  <div class="row card-deck">
+     <div class="card col-12 col-md-4">
+         <img class="card-img-top" src="assets/img/meet_coffe.PNG" alt="Card image cap">
+         <div class="card-body">
+         <h5 class="card-title">Meet & Coffe</h5>
+         <p class="card-text">Trabajo para un Cafe y sus servicios.</p>
+         </div>
+     </div>
+     <div class="card card col-12 col-md-4">
+         <img class="card-img-top" src="assets/img/cuppon.png" alt="Card image cap">
+         <div class="card-body">
+         <h5 class="card-title">Cuppon</h5>
+         <p class="card-text">servicio de ventas por eventos</p>
+         </div>
+     </div>
+     <div class="card card col-12 col-md-4">
+         <img class="card-img-top" src="assets/img/iguana.png" alt="Card image cap">
+         <div class="card-body">
+         <h5 class="card-title">Iguana Page</h5>
+         <p class="card-text">Página para vercomportamiento de CSS .</p>
+         </div>
+     </div>
+ <div class="row p-4">      
+
+         <div class="card col-12 col-md-4">
+         <img class="card-img-top" src="assets/img/suricata.png" alt="Card image cap">
+         <div class="card-body">
+         <h5 class="card-title">Suricata</h5>
+         <p class="card-text">Pagina para ver comportamiento de CSS.</p>
+         </div>
+     </div>
+     <div class="card card col-12 col-md-4">
+         <img class="card-img-top" src="assets/img/oliviaros.png" alt="Card image cap">
+         <div class="card-body">
+         <h5 class="card-title">Olivia Ros</h5>
+         <p class="card-text">Un sitio completo y resposive</p>
+         </div>
+     </div>
+     <div class="card card col-12 col-md-4">
+         <img class="card-img-top" src="assets/img/ricommida.png" alt="Card image cap">
+         <div class="card-body">
+         <h5 class="card-title">Ricomida</h5>
+         <p class="card-text">sitio de comida para un proyecto.</p>
+         </div>
+     </div>
+  </div>
+</div>
+</section>
 
 
 
