se agrego footer

--- a/PruebasEnJS/index.html
+++ b/PruebasEnJS/index.html
@@ -225,6 +225,24 @@
 
 <!--FOORTER-->
 
+<footer>
+  <div class="row">
+      <div class="footer-redes col-12 col-md-6">
+          <p>CARLOS ROJAS</p>
+      </div>
+  <div class="footer-redes col-12 col-md-6 d-inline-block">
+      <div class="row p-2">
+      <div class="ico col-3"><i class="fab fa-github-square fa-4x"></i></div>
+      <div class="ico col-3"><i class="fab fa-linkedin fa-4x"></i></div>
+      <div class="ico col-3"> <i class="fab fa-facebook-square fa-4x"></i></div>
+      <div class="ico col-3"><i class="fab fa-twitter-square fa-4x"></i></div>
+  </div>
+  </div>
+
+  </div>
+</footer>
+
+
 
     <!--jQuery 3.3.1 sin slim-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
