--- a/Pruebas/popover.html
+++ b/Pruebas/popover.html
@@ -17,13 +17,26 @@
 <br>
 <br><br>
 
-<h1 data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Aqui puedo levantar un popover</h1>
+<h1 data-toggle="popover" title="Prueba" data-content="este es el contenido">Aqui puedo levantar un popover</h1>
 
+<span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip">
+  <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>Disabled button</button>
+</span>
+
+<button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right" title="Tooltip on top">
+  Tooltip on top
+</button>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     
+
+
+    <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-html="true" title="mensaje">
+      Tooltip with HTML hhhhhh
+    </button>
+
 
     <script>
     $(function () {
