--- a/Pruebas/prueba1.html
+++ b/Pruebas/prueba1.html
@@ -13,10 +13,62 @@ transition: all 800ms;
 
 <body>
 
-  <p onclick="this.classList.add('warning')"> Solo Añadir </p>
-  <p onclick="this.classList.toggle('warning')"> Toggle </p>
-  
 
+
+
+  <div">
+        <section class="container-fluid my-5 p-6 bg-light" id="work">
+      <h2 class="text-center text-dark mb-3">MIS TRABAJOS</h2>
+      <div class="card-deck">
+
+<div class="row w-100 mx-0">
+        <div class="card col-12 col-md-4">
+          <img class="card-img-top" src="assets/img/meet_coffe.PNG" alt="meet_coffee">
+          <div class="card-body" data-toggle="modal" data-target="#cafe">
+            <h5 class="card-title">Meet & Coffee</h5>
+            <p class="card-text">Mi primer diseño de HTML y CSS en la academia.</p>
+          </div>
+        </div>
+        <div class="card col-12 col-md-4">
+          <img class="card-img-top" src="assets/img/cuppon.png" alt="cuppon">
+          <div class="card-body">
+            <h5 class="card-title">Cuppon</h5>
+            <p class="card-text" data-toggle="modal" data-target="#papas">Portal diseñado con My first para servicio de ventas online.</p>
+          </div>
+        </div>
+        <div class="card col-12 col-md-4">
+          <img class="card-img-top" src="assets/img/iguana.png" alt="">
+          <div class="card-body" data-toggle="modal" data-target="#salmones">
+            <h5 class="card-title">Iguana Page</h5>
+            <p class="card-text">Diseño que me enseño a trabajar con fondos y maquetación.</p>
+          </div>
+        </div>
+        <div class="card col-12 col-md-4">
+          <img class="card-img-top" src="assets/img/suricata.png" alt="suricata">
+          <div class="card-body" data-toggle="modal" data-target="#asado">
+            <h5 class="card-title">Suricata</h5>
+            <p class="card-text">Desafio con maquetación en la academia.</p>
+          </div>
+        </div>
+        <div class="card col-12 col-md-4">
+          <img class="card-img-top" src="assets/img/oliviaros.png" alt="oliviaros">
+          <div class="card-body">
+            <h5 class="card-title">Olivia Ros</h5>
+            <p class="card-text" data-toggle="modal" data-target="#papas">Un proyecto completo que permite maquetar y trabajar con Card.</p>
+          </div>
+        </div>
+        <div class="card col-12 col-md-4">
+          <img class="card-img-top" src="assets/img/ricommida.png" alt="ricomida">
+          <div class="card-body" data-toggle="modal" data-target="#salmones">
+            <h5 class="card-title">Ricomida</h5>
+            <p class="card-text">Diseño de servicio de comida, ideal para un restaurant.</p>
+          </div>
+        </div>
+
+
+      </div>
+    </section>
+  </div>
 
 
 
